--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "firebase": "^11.8.1",
     "framer-motion": "^11.2.10",
     "genkit": "^1.8.0",
+    "globe.gl": "^2.32.4",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
@@ -53,12 +54,16 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.162.0",
+    "topojson-client": "^3.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.162.0",
+    "@types/topojson-client": "^3.1.4",
     "genkit-cli": "^1.8.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
